plugins {
    java
    id("org.springframework.boot") version "3.4.5"
    id("io.spring.dependency-management") version "1.1.7"
    jacoco
}

group = "com.cms"
version = "0.0.1-SNAPSHOT"

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation("org.springframework.boot:spring-boot-starter-web")
    implementation("org.springframework.boot:spring-boot-starter-data-jpa")
    implementation("org.springframework.boot:spring-boot-starter-security")
    implementation("org.springframework.boot:spring-boot-starter-validation")
    implementation("org.springframework.boot:spring-boot-starter-oauth2-resource-server")

    runtimeOnly("org.postgresql:postgresql")
    runtimeOnly("com.h2database:h2")
    implementation("org.flywaydb:flyway-core")
    runtimeOnly("org.flywaydb:flyway-database-postgresql")

    // Excel import / export
    implementation("org.apache.poi:poi-ooxml:5.3.0")

    testImplementation("org.springframework.boot:spring-boot-starter-test")
    testImplementation("org.springframework.security:spring-security-test")
    testRuntimeOnly("org.junit.platform:junit-platform-launcher")
}

tasks.withType<Test> {
    useJUnitPlatform()
    // Run tests with JVM in UTC so date/time assertions are timezone-independent
    jvmArgs("-Duser.timezone=UTC")
}

tasks.withType<JavaExec> {
    // Ensure the Spring Boot process itself runs in UTC
    jvmArgs("-Duser.timezone=UTC")
}

jacoco {
    toolVersion = "0.8.12"
}

tasks.jacocoTestReport {
    dependsOn(tasks.test)
    reports {
        xml.required = true
        html.required = true
    }
    classDirectories.setFrom(
        files(classDirectories.files.map {
            fileTree(it) {
                exclude("com/cms/CmsApplication.class")
                exclude("com/cms/config/DataLoader.class")
                exclude("com/cms/config/LocalDataSeeder.class")
                exclude("com/cms/config/LocalRbacSeeder.class")
                exclude("com/cms/service/StudentImportService*.class")
                exclude("com/cms/service/ExcelTemplateService.class")
                exclude("com/cms/model/**")
                exclude("com/cms/service/*Scholarship*.class")
                exclude("com/cms/controller/*Scholarship*.class")
            }
        })
    )
}

tasks.jacocoTestCoverageVerification {
    dependsOn(tasks.jacocoTestReport)
    violationRules {
        rule {
            limit {
                minimum = "0.93".toBigDecimal()
            }
        }
    }
    // Exclude the main application class, seed data loaders, and model entities
    // from coverage. The main class and data seeders only contain Spring Boot
    // entry/startup hooks which cannot be meaningfully unit tested.
    // Model entities are primarily boilerplate getters/setters validated
    // through integration tests.
    // Excel import/template services depend on Apache POI file I/O and are
    // better verified via integration tests; excluding from the unit-test metric.
    classDirectories.setFrom(
        files(classDirectories.files.map {
            fileTree(it) {
                exclude("com/cms/CmsApplication.class")
                exclude("com/cms/config/DataLoader.class")
                exclude("com/cms/config/LocalDataSeeder.class")
                exclude("com/cms/config/LocalRbacSeeder.class")
                exclude("com/cms/service/StudentImportService*.class")
                exclude("com/cms/service/ExcelTemplateService.class")
                exclude("com/cms/model/**")
                exclude("com/cms/service/*Scholarship*.class")
                exclude("com/cms/controller/*Scholarship*.class")
            }
        })
    )
}

tasks.check {
    dependsOn(tasks.jacocoTestCoverageVerification)
}
